--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@stomp/stompjs": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "webstomp-client": "^1.2.6",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/stompjs": "^2.3.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
